--- a/src/index.css
+++ b/src/index.css
@@ -1,213 +1,273 @@
-:root{
-  --primary: 255 255 255;
-  --secondary: 242  242 242;
-  --accent: 80 221 144;
-  --content: 0 0 0;
-  --line:200  200  200;
-  --alert:220  38  38;
-  --disable: 127 127 127;
-  --info: 67 120 208;
-  --warning: 177 130 47;
-  --hazard: 241 90 34; 
-
-}
-.dark{
-  --primary: 0 0 0;
-  --secondary: 22  22 22;
-  --accent: 80 221 144;
-  --content: 255 255 255;
-  --line:14  14  14;
-  --alert:220  38  38;
-  --disable: 127 127 127;
-  --info: 67 120 208;
-  --warning: 177 130 47;
-  --hazard: 241 90 34; 
-  
-}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face{
-  font-family: 'Roboto-bold';
-  src: url(/fonts/roboto-bold.woff) format("woff")
-  ,url(/fonts/roboto-bold.woff2) format("woff2");
-}
-@font-face{
-  font-family: 'Roboto-medium';
-  src: url(/fonts/roboto-medium.woff) format("woff")
-  ,url(/fonts/roboto-medium.woff2) format("woff2");
-}
-@font-face{
-  font-family: 'Roboto';
-  src: url(/fonts/roboto-regulat.woff) format("woff")
-      ,url(/fonts/roboto-regulat.woff2) format("woff2");
-}
 
+@font-face {
+    font-family: 'Roboto Regular';
+    src: url('../fonts/roboto-regular.woff') format("woff"),
+        url('../fonts/roboto-regular.woff2') format("woff2");
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Roboto Medium';
+    src: url('../fonts/roboto-medium.woff') format("woff"),
+        url('../fonts/roboto-medium.woff2') format("woff2");
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Roboto Bold';
+    src: url('../fonts/roboto-bold.woff') format("woff"),
+        url('../fonts/roboto-bold.woff2') format("woff2");
+    font-display: swap;
+}
 
 @layer base{
-  body{
-    @apply bg-secondary text-content font-fontRegular
-  }
-  a{
-    @apply text-content no-underline 
-  }
-  ul{
-    @apply list-none text-content
-  }
-  img{
-    @apply block w-full h-auto bg-cover
-  }
-  h1,h2,h3,h4,h5,h6{
-    @apply font-bold  font-fontHeavy text-content
-  }
-  h1{
-    @apply text-3xl mb-4 
-  }
-  h2{
-    @apply text-xl mb-4 
-  }
-  h3{
-    @apply text-lg mb-2 
-  }
-  h4{
-    @apply text-base mb-4 
-  }
-  h5{
-    @apply text-sm mb-2 
-  }
-  p{
-    @apply mb-2 text-content !leading-6 opacity-60
-  }
-  table {
-    @apply w-full text-base font-fontBase
-  }
-  table th{
-    @apply font-bold py-4 px-2 text-left
-  }
-  table td{
-    @apply p-5 text-left
-  }
-  table tbody tr:nth-child(odd){
-    @apply bg-primary bg-opacity-20
-  }
-  main{
-    @apply transition-all duration-500
-  } 
+    /* START OF BASE */
+    :root{
+        /* --dark_bg: 241, 241, 241; */
+        --primary: 245 245 245;
+        --secondary: 242 242 242;
+        --accent: 80 221 144;
+        --content: 0 0 0;
+        --line: 212 212 212;
+        --alert: 220 38 38;
+        --cancel: 127 127 127;
+        --info: 67 130 208;
+        --warning: 177 130 47;
+        --delete: 249 105 14;
+    }
+    .dark{
+        /* --dark_bg: 15, 15, 15; */
+        --primary: 22 22 22;
+        --secondary: 0 0 0;
+        --accent: 80 221 144;
+        --content: 255 255 255;
+        --line: 14 14 14;
+        --alert: 220 38 38;
+        --cancel: 127 127 127;
+        --info: 67 130 208;
+        --warning: 177 130 47;
+        --delete: 249 105 14;
+    }
 
-  
- 
-}
-@layer components{
-  .nav{
-    @apply  space-y-4 mt-20 font-fontBase transition-all duration-500
-  }
-   .nav .nav-link{
-    @apply p-1 pl-8 text-lg transition-all duration-500
-   }
-   .nav .nav-link a{
-    @apply flex gap-3 items-center transition-all duration-500
-   }
-   .nav .nav-link.active a{
-    @apply text-accent transition-all duration-500
-   }
-   .nav .nav-link.active{
-    @apply border-l border-accent transition-all duration-500
-   }
-   .searchBar .searchIcon{
-    @apply  text-content
-   }
-   .searchBar input{
-    @apply bg-primary text-content;
-   }
-   .tab .tab-link {
-    @apply px-10 py-5 font-semibold
-   }
-   .tab .tab-link.active {
-    @apply border-b border-accent
-   }
-   .tab .tab-link.active a{
-    @apply text-accent
-   }
-   .tab .tab-link.debugger {
-    @apply border-b border-alert text-accent
-   }
-   .tab .tab-link.debugger a{
-    @apply text-alert
-   }
-   .table-action ul{
-    @apply flex gap-4
-   }
-   .table-action ul button{
-    @apply text-base
-   }
+    html, body{
+        @apply scroll-smooth;
+    }
+    body{
+        @apply overflow-x-hidden bg-primary text-content font-regular;
+    }
+    a{
+        @apply text-content
+    }
+    h1,h2,h3,h4,h5,h6{ @apply font-bold text-content font-thicker; }
+    h1{ @apply text-3xl mb-4; }
+    h2{ @apply text-xl mb-4; }
+    h3{ @apply text-lg mb-2; }
+    h4{ @apply text-base mb-4; }
+    h5{ @apply text-base mb-2; }
+    p{ @apply mb-2 !leading-6 opacity-60; }
+    ul{ @apply text-content; }
+    table{
+        @apply w-full text-xs;
+        th{
+            @apply font-bold py-4 px-2 text-left;
+        }
+        td{
+            @apply p-2 text-left;
+        }
+        tbody tr:nth-child(odd){
+            @apply bg-secondary bg-opacity-20;
+        }
+
+        tr{
+            @apply cursor-pointer text-lg h-[3rem]; 
+            td{
+                @apply select-none;
+            }
+        }
+    }
+    input, textarea, button{ @apply outline-none focus:outline-none; }
+    img, video, button{ @apply select-none; }
+
     .tooltip{
-    @apply relative 
-   }
-   .tooltip::after{
-    @apply absolute content-[attr(data-tooltip)] text-xs p-0.5 text-content bg-primary bg-opacity-90 top-[calc(100%+10px)] left-1/2 -translate-x-1/2 transition-transform scale-0 px-1.5
-   }
-   .tooltip:hover::after{
-    @apply scale-100
-   }
-   .input-wrap{
-    @apply mb-3 relative
-   }
-   .input-wrap label{
-    @apply mb-1 block text-xs
-   }
-   .input-wrap small{
-    @apply absolute top-1 right-1 text-alert
-   }
-   
-   .input-wrap input,
-   .input-wrap select,
-   .input-wrap textarea{
-    @apply block w-full px-1 py-2 rounded-md outline-none border-transparent border-2 focus:border-info transition-all focus:bg-info/10 focus:text-info text-stone-800
-   }
-   .input-wrap small{
-    @apply absolute top-0 right-1 italic text-xs
-   }
-   .form-action{
-    @apply flex gap-2 justify-end
-   }
-   .loading-bar::after {
-    @apply content-[""] absolute top-0 left-0 w-[180%] h-full  bg-gradient-to-r from-transparent via-stone-500 to-transparent  animate-loading;
-  } 
+        @apply text-base relative after:hover:scale-100;
+    }
+    .tooltip:after{
+        @apply p-0.5 px-1.5 rounded-md
+        absolute content-[attr(data-tooltip)]
+        text-xs text-content top-[calc(100%+10px)] tx-a
+        bg-secondary/90 scale-0 transition-transform;
+    }
+
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
+    
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px rgb(16, 16, 16); 
+        border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        background:rgba(54, 54, 54, 0.864); 
+        border-radius: 10px;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+        background:rgb(5, 103, 201); 
+    }
+        
+    /* END OF BASE */
 }
+
+@layer components{
+    /* START OF COMPONENTS */
+    .nav{
+        @apply space-y-4 mt-20;
+        .nav-link {
+            @apply p-1 pl-8;
+            a{
+                @apply p-2 flex gap-3 items-center
+            }
+        }
+        .nav-link.active{
+            @apply border-l border-accent;
+            a{
+                @apply text-accent;
+            }
+        }
+
+        .nav-link:hover a{
+            @apply text-accent;
+        }
+   
+    }
+
+    .tab{
+        .tab-link{
+            @apply px-3 py-5 border-b border-transparent;
+        }
+        .tab-link.active{
+            @apply border-accent;
+            a{
+                @apply text-accent;
+            }
+        }
+        .tab-link.danger{
+          @apply border-b-2 border-red-600;
+          a{
+              @apply text-red-600;
+          }
+      }
+        .tab-link.danger:hover a{
+          @apply text-red-600;
+      }
+    }
+    .table-action{
+        ul{
+            @apply flex gap-4;
+        }
+    }
+
+    .input-wrap{
+        @apply mb-3 relative;
+        label{
+            @apply mb-1 block text-xs;
+        }
+        input, select, textarea{
+            @apply block w-full p-1 rounded-md
+            border-2 text-stone-900 
+            focus:border-info focus:bg-primary focus:text-info;
+        }
+        small{
+            @apply absolute top-0 right-1 text-alert italic text-xs;
+        }
+    }
+    .form-action{
+        @apply flex gap-2 justify-end items-center;
+    }
+
+    .header{
+        
+    }
+
+    .footer{
+        
+    }
+
+    /* START OF BUTTONS */
+    .btn{
+        @apply px-2 py-1
+        rounded-md
+        text-sm text-center
+        transition-colors
+        flex center gap-2
+        disabled:cursor-not-allowed disabled:opacity-60;
+    }
+    .btn--accent{
+        @apply bg-accent text-white;
+    }
+    .btn-form{
+        @apply p-2 w-1/2 flex center gap-2;
+    }
+    .btn--cancel{
+        @apply bg-cancel text-white;
+    }
+    .btn--alert{
+        @apply bg-alert text-white;
+    }
+    .btn--info{
+        @apply bg-info text-white;
+    }
+    .btn--warning{
+        @apply bg-warning text-white;
+    }
+    .btn--delete{
+        @apply bg-delete text-white;
+    }
+    /* END OF BUTTONS */
+
+    .loading-bar{
+        @apply pointer-events-none cursor-default;
+    }
+    .loading-bar::after {
+        @apply content-[''] absolute top-0 left-0 w-[180%] h-full  bg-gradient-to-r from-transparent via-white/50 to-transparent  animate-loading;
+    }
+
+    /* END OF COMPONENTS */
+}
+
 @layer utilities{
-  .btn{
-    @apply px-2 py-1 rounded-md text-sm transition-all  flex items-center gap-2 
-  }.btn--accent{
-    @apply bg-accent text-white 
-  }
-  .btn-form{
-    @apply p-2 w-1/2 flex justify-center items-center gap-2 text-center font-semibold
-  }
-  .btn-disable{
-    @apply p-2  flex justify-center items-center gap-2  bg-alert text-stone-800 text-center font-semibold text-white
-  }
-  .btn-disable{
-    @apply p-2  flex justify-center items-center gap-2  bg-hazard text-stone-800 text-center font-semibold text-white
-  }
-  .btn--cancel{
-    @apply p-2 flex justify-center items-center gap-2 bg-disable text-stone-800 text-center font-semibold
-  }
-  .btn--alert{
-    @apply text-white w-full bg-alert
-  }
-  .btn--info{
-    @apply bg-info text-white w-full 
-  }
-  .btn:disabled{
-    @apply cursor-not-allowed opacity-60
-  }
-  .btn--warning{
-    @apply bg-warning text-white
-  }
-  
-  
- }
+    /* START OF UTILITIES */
+    .f-col{ @apply flex flex-col; }
+    .f-col-center{ @apply flex flex-col items-center justify-center; }
+    .center {@apply items-center justify-center; }
+    .between-center {@apply justify-between items-center; }
+    .between-end {@apply justify-between items-end; }
+
+    .ft-el{ @apply font-extralight }
+    .ft-lt{ @apply font-light }
+    .ft-nm{ @apply font-normal }
+    .ft-md{ @apply font-medium }
+    .ft-sb{ @apply font-semibold }
+    .ft-b{ @apply font-bold }
+    .ft-ex{ @apply font-extrabold }
+
+    .mx-a{ @apply mx-auto }
+
+    .tx-a{ @apply left-1/2 -translate-x-1/2 }
+    .ty-a{ @apply top-1/2 -translate-y-1/2 }
+    .txy-a{ @apply top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2 }
+
+    .scrollbar-gutter{
+        scrollbar-width: thin;
+        scrollbar-gutter: stable;
+    }
+    /* END OF UTILITIES */
+}
+
+/* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -218,55 +278,34 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
-::-webkit-scrollbar {
-  width: 5px;
-  }
-  
-  ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(16, 16, 16); 
-  border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-  background:rgba(54, 54, 54, 0.864); 
-  border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-  background:rgb(5, 103, 201); 
-  }
-  .spinner circle {
-    fill: none;
-    /* stroke: var(--light); */
-    stroke-width: 6;
-    stroke-dasharray: 1, 200;
+
+.spinner circle {
+  fill: none;
+  /* stroke: var(--light); */
+  stroke-width: 6;
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  stroke-linecap: round;
+  animation: dash 1s ease-in-out infinite;
+}
+@keyframes loading {
+  /* "0%": { transform: "translateX(-100%)" }, */
+  0%   {transform: translateX(-100%);}
+  100%  {transform: translateX(100%);}
+
+}
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1,200;
     stroke-dashoffset: 0;
-    stroke-linecap: round;
-    animation: dash 1s ease-in-out infinite;
-  }
-  
-  @keyframes dash {
-    0% {
-      stroke-dasharray: 1,200;
-      stroke-dashoffset: 0;
-    }
-  
-    50% {
-      stroke-dasharray: 90, 200;
-      stroke-dashoffset: -35px;
-    }
-  
-    100% {
-      stroke-dashoffset: -110px;
-    }
-  } 
-  @keyframes loading {
-    /* "0%": { transform: "translateX(-100%)" }, */
-    0%   {transform: translateX(-100%);}
-    100%  {transform: translateX(100%);}
-
   }
 
+  50% {
+    stroke-dasharray: 90, 200;
+    stroke-dashoffset: -35px;
+  }
 
-
-  
+  100% {
+    stroke-dashoffset: -110px;
+  }
+}
